--- a/MusicStore/Pages/Library.xaml
+++ b/MusicStore/Pages/Library.xaml
@@ -12,7 +12,7 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="4*"/>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
         <Border x:Name="Filter" Grid.Column="0" Background="#FFD4F327">
@@ -28,7 +28,7 @@
         <!--ContentInfoPanel-->
         <ScrollViewer x:Name="DetailsScrollViewer" Grid.Column="2" PreviewMouseWheel="DetailsScrollViewer_PreviewMouseWheel" VerticalScrollBarVisibility="Hidden">
             <!--TrackDetails/AlbumDetails-->
-            <StackPanel x:Name="DetailsStackPanel">
+            <StackPanel x:Name="DetailsStackPanel" Background="#FFABABAB">
                 <Separator Height="25" Background="{x:Null}" Foreground="{x:Null}"/>
                 <Grid Width="{Binding ActualWidth, ElementName=DetailsStackPanel}">
                     <!--This grid purpose is to center the logo of the object-->
